--- a/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
+++ b/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
@@ -78,6 +78,12 @@
     <Compile Include="AddFundsForm.Designer.cs">
       <DependentUpon>AddFundsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddNewItemForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddNewItemForm.Designer.cs">
+      <DependentUpon>AddNewItemForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cart.cs">
       <DependentUpon>LogisticDM.tt</DependentUpon>
     </Compile>
@@ -132,6 +138,12 @@
     <Compile Include="Product.cs">
       <DependentUpon>LogisticDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProductStockForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductStockForm.Designer.cs">
+      <DependentUpon>ProductStockForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -157,6 +169,9 @@
     <EmbeddedResource Include="AddFundsForm.resx">
       <DependentUpon>AddFundsForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AddNewItemForm.resx">
+      <DependentUpon>AddNewItemForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChangeInfoForm.resx">
       <DependentUpon>ChangeInfoForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductStockForm.resx">
+      <DependentUpon>ProductStockForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
