Program cu DB Modificat
o sa trimit query-ul pentru DB asap

--- a/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
+++ b/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
@@ -135,6 +135,12 @@
     <Compile Include="Order.cs">
       <DependentUpon>LogisticDM.tt</DependentUpon>
     </Compile>
+    <Compile Include="OrderDetailsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OrderDetailsForm.Designer.cs">
+      <DependentUpon>OrderDetailsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="OrderManagerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -204,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuForm.resx">
       <DependentUpon>MenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OrderDetailsForm.resx">
+      <DependentUpon>OrderDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OrderManagerForm.resx">
       <DependentUpon>OrderManagerForm.cs</DependentUpon>
