--- a/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
+++ b/LogisticaDepozit/LogisticaDepozit/LogisticaDepozit.csproj
@@ -220,6 +220,12 @@
       <DependentUpon>VerificationForm.cs</DependentUpon>
     </Compile>
     <Compile Include="VerificationManager.cs" />
+    <Compile Include="VerifyChangeMail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerifyChangeMail.Designer.cs">
+      <DependentUpon>VerifyChangeMail.cs</DependentUpon>
+    </Compile>
     <Compile Include="ViewOrders.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -278,6 +284,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VerificationForm.resx">
       <DependentUpon>VerificationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VerifyChangeMail.resx">
+      <DependentUpon>VerifyChangeMail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ViewOrders.resx">
       <DependentUpon>ViewOrders.cs</DependentUpon>
